--- a/humidity.html
+++ b/humidity.html
@@ -62,9 +62,9 @@
         <div class = "col-md-8">
           <div class = "description-content">
             <div class="description-header">
-              Summary: Latitude vs X 
+              Humidity
             </div>
-            <img src="images/Latitude_VS_Temp.png" id= "description-image">
+            <img src="images/Latitude_VS_Humidity.png" id="images">
             <p>
               The purpose of this project was to utilize web API to pull data from Open Weather Map API and compare latitude of 500 + cities with various factors.  <br><br>
               The different factors that we compared latitude with was humidity, temperature, winds speed, and cloudiness. <br><br>
@@ -78,14 +78,13 @@
               Visualization
             </div>
             <a href = "temp.html"><img src="images/Latitude_VS_Temp.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "humidity.html"><img src="images/Latitude_VS_Humidity.png" class = "imageNav-photo" id = "images" ></a>
+            <a href = "humidity.html"><img src="images/Latitude_VS_Humidity.png" class = "imageNav-photo active" id = "images" ></a>
             <a href = "cloudiness.html"><img src="images/Latitude_VS_Cloudiness.png" class = "imageNav-photo" id = "images" ></a>
             <a href = "wind.html"><img src="images/Latitude_VS_WindSpeed.png" class = "imageNav-photo" id = "images" ></a>
           </div>
         </div>
       </div>    
     </div>
-    
     <!-- End of container -->
 
     <!-- Start of footer -->
