--- a/comparison.html
+++ b/comparison.html
@@ -58,34 +58,34 @@
 
     <!-- Start of container -->
     <div class= "container">
-      <div class= "row" >
-        <div class = "col-md-8">
-          <div class = "description-content">
-            <div class="description-header">
-              Summary: Latitude vs X 
-            </div>
-            <img src="images/Latitude_VS_Temp.png" id= "description-image">
-            <p>
-              The purpose of this project was to utilize web API to pull data from Open Weather Map API and compare latitude of 500 + cities with various factors.  <br><br>
-              The different factors that we compared latitude with was humidity, temperature, winds speed, and cloudiness. <br><br>
-              This website provides the data used and the visalizations that were created from the analysis with explanations and trends observed. 
-            </p>
+      <div class = "description-content">
+        <div class = "description-header">
+          Comparison: Latitude vs X 
+        </div>
+        <p>Click on any plot to get an in-dept analysis</p>
+        <div class="row">
+          <div class = "col-md-6">
+            <div class= "comparison-header"> vs Temp </div>
+            <div class ="comparison-image" id = "images"> <a href = "temp.html"><img src="images/Latitude_VS_Temp.png" ></a></div>
+          </div>
+          <div class = "col-md-6">
+            <div class= "comparison-header"> vs Humidity </div>
+            <div class ="comparison-image" id = "images"><a href = "humidity.html"><img src="images/Latitude_VS_Humidity.png"  ></a></div>
           </div>
         </div>
-        <div class = "col-md-4">
-          <div class = "description-content" id = "imageNav-area">
-            <div class="imageNav-header">
-              Visualization
-            </div>
-            <a href = "temp.html"><img src="images/Latitude_VS_Temp.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "humidity.html"><img src="images/Latitude_VS_Humidity.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "cloudiness.html"><img src="images/Latitude_VS_Cloudiness.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "wind.html"><img src="images/Latitude_VS_WindSpeed.png" class = "imageNav-photo" id = "images" ></a>
+        <div class = "row"><p><br></p></div>
+        <div class = "row">
+          <div class = "col-md-6">
+            <div class= "comparison-header"> vs Cloudiness </div>
+            <div class ="comparison-image" id = "images"><a href = "cloudiness.html"><img src="images/Latitude_VS_Cloudiness.png" ></a></div>
           </div>
-        </div>
-      </div>    
+          <div class = "col-md-6">
+            <div class= "comparison-header"> vs Wind Speed </div>
+            <div class ="comparison-image" id = "images"><a href = "wind.html"><img src="images/Latitude_VS_WindSpeed.png" ></a></div>
+          </div>
+        </div>  
+      </div>
     </div>
-    
     <!-- End of container -->
 
     <!-- Start of footer -->
