--- a/data.html
+++ b/data.html
@@ -31,7 +31,7 @@
               <span class="icon-bar"></span>
             </button>
             <div class="col-xs-9 phone-nav">
-              <a class="navbar-brand" href="index.html" id="logo">Latitude</a>
+              <a class="navbar-brand" href="#" id="logo">Latitude</a>
             </div>
           </div>
 
@@ -57,35 +57,7 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-    <div class= "container">
-      <div class= "row" >
-        <div class = "col-md-8">
-          <div class = "description-content">
-            <div class="description-header">
-              Summary: Latitude vs X 
-            </div>
-            <img src="images/Latitude_VS_Temp.png" id= "description-image">
-            <p>
-              The purpose of this project was to utilize web API to pull data from Open Weather Map API and compare latitude of 500 + cities with various factors.  <br><br>
-              The different factors that we compared latitude with was humidity, temperature, winds speed, and cloudiness. <br><br>
-              This website provides the data used and the visalizations that were created from the analysis with explanations and trends observed. 
-            </p>
-          </div>
-        </div>
-        <div class = "col-md-4">
-          <div class = "description-content" id = "imageNav-area">
-            <div class="imageNav-header">
-              Visualization
-            </div>
-            <a href = "temp.html"><img src="images/Latitude_VS_Temp.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "humidity.html"><img src="images/Latitude_VS_Humidity.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "cloudiness.html"><img src="images/Latitude_VS_Cloudiness.png" class = "imageNav-photo" id = "images" ></a>
-            <a href = "wind.html"><img src="images/Latitude_VS_WindSpeed.png" class = "imageNav-photo" id = "images" ></a>
-          </div>
-        </div>
-      </div>    
-    </div>
-    
+   
     <!-- End of container -->
 
     <!-- Start of footer -->
