--- a/comparison.html
+++ b/comparison.html
@@ -47,7 +47,7 @@
                   <li><a href="wind.html">Wind Speed</a></li>
                 </ul>
               </li>
-              <li><a href="comparison.html">Comparison</a></li>
+              <li class="nav-item active"><a href="comparison.html">Comparison</a></li>
               <li><a href="data.html">Data</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
