--- a/temp.html
+++ b/temp.html
@@ -38,10 +38,10 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right navbar-right-custom">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
+              <li class="dropdown active">
+                <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                 <li><a href="temp.html">Max Temperature</a></li>
+                 <li class="nav-item active"><a href="temp.html">Max Temperature</a></li>
                   <li><a href="humidity.html">Humidity</a></li>
                   <li><a href="cloudiness.html">Cloudiness</a></li>
                   <li><a href="wind.html">Wind Speed</a></li>
@@ -58,6 +58,32 @@
 
     <!-- Start of container -->
     <div class= "container">
+      <div class= "row" >
+        <div class = "col-md-8">
+          <div class = "description-content">
+            <div class="description-header">
+              Latitude vs Tempertaure
+            </div>
+            <img src="images/Latitude_VS_Temp.png" id="images">
+            <p>
+              As Latitude Increases, Max Temperature Decreases. Lower Latitudes have higher temperatures. <br>
+              Equator (Latitude =0) does in fact have higher temperatures.<br>
+              Higher Latitudes have bigger range than the lower latitudes. <br>
+            </p>
+          </div>
+        </div>
+        <div class = "col-md-4">
+          <div class = "description-content" id = "imageNav-area">
+            <div class="imageNav-header">
+              Visualization
+            </div>
+            <a href = "temp.html"><img src="images/Latitude_VS_Temp.png" class = "imageNav-photo active" id = "images" ></a>
+            <a href = "humidity.html"><img src="images/Latitude_VS_Humidity.png" class = "imageNav-photo" id = "images" ></a>
+            <a href = "cloudiness.html"><img src="images/Latitude_VS_Cloudiness.png" class = "imageNav-photo" id = "images" ></a>
+            <a href = "wind.html"><img src="images/Latitude_VS_WindSpeed.png" class = "imageNav-photo" id = "images" ></a>
+          </div>
+        </div>
+      </div>    
     </div>
     <!-- End of container -->
 
